sample/gitops/hello-world-spring/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-world-spring-nexus
  namespace: nexus
spec:
  ingressClassName: traefik
  rules:
  - host: hello-world-spring.nexus.cloud.35.209.207.26.nip.io
    http:
      paths:
      - backend:
          service:
            name: hello-spring-svc
            port:
              number: 80
        path: /
        pathType: Prefix
